--- a/server-express-mongodb/package.json
+++ b/server-express-mongodb/package.json
@@ -21,11 +21,11 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.11",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.6",
     "passport-jwt": "^4.0.0",
     "validator": "^13.1.17"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.3"
+    "@babel/core": "^7.12.3",
+    "nodemon": "^2.0.6"
   }
 }
