--- a/server-express-mongodb/package.json
+++ b/server-express-mongodb/package.json
@@ -12,6 +12,7 @@
   "author": "Team Spongbob",
   "license": "ISC",
   "dependencies": {
+    "@sendgrid/mail": "^7.3.0",
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cors": "^2.8.5",
