--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "i": "^0.3.6",
+    "jsonwebtoken": "^8.5.1",
     "npm": "^6.14.8",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
