--- a/client/package.json
+++ b/client/package.json
@@ -9,8 +9,9 @@
     "axios": "^0.21.0",
     "dotenv": "^8.2.0",
     "i": "^0.3.6",
+    "js-cookie": "^2.2.1",
     "jsonwebtoken": "^8.5.1",
-    "npm": "^6.14.8",
+    "npm": "^7.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
